fix session header gap on right side

--- a/app/assets/stylesheets/session_forms/session_header.scss
+++ b/app/assets/stylesheets/session_forms/session_header.scss
@@ -18,6 +18,9 @@
 .session-header__fa-music {
   color: rgb(29, 160, 195);
   font-size: $ms2;
+}
+
+.session-header__fa-music {
   margin-right: 5px;
 }
 
